--- a/docs/docu.qmd
+++ b/docs/docu.qmd
@@ -804,7 +804,6 @@ def jour_semaine(j):
     else:
         return Dimanche 
 ```
-[PUT ILLUSTRATION OF TRAJECTORY MAP HERE]
 <\details>
  
 
@@ -832,7 +831,44 @@ def coor_unique(j):
             co.append(i[1])
     return co
 ```
-[PUT ILLUSTRATION OF TRAJECTORY MAP HERE]
+<\details>
+
+
+<details>
+  <summary>`nb_tot_jour(j)`<summary>
+
+**Description**: 
+Compte le nombre de jours correspondant au jour `j`
+
+**Paramètres**:
+  <ul>
+    <li>`j` (int) : Le numéro du jour de la semaine voulu (0 pour lundi, ..., 6 pour dimanche)
+  <\ul>
+
+**Retourne**:
+-len(D) (int): le nombre de jours étant un jour `j` dans les données
+
+**Code de la fonction**: 
+```python
+def nb_tot_jour(j):
+    D=[]
+    for file in files:
+        with open(file, 'r', encoding='utf-8') as f:
+            lecteur = csv.reader(f, delimiter=';')  # Définir le séparateur si nécessaire
+            next(lecteur) #ignorer l'entête 
+            for ligne in lecteur: 
+                dat, heur = ligne[0].split(' ')
+                date=datetime.strptime(dat, '%Y-%m-%d')
+                jour=date.weekday()
+                if jour==j:
+                    dep=ligne[2].split(' ')[0]
+                    arr=ligne[3].split(' ')[0]
+                    if dep!='' and arr!='':
+                        if dep in Sta and arr in Sta:
+                            if dat not in D:
+                                D.append(dat)
+    return len(D)
+```
 <\details>
 
 
