--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -1,5 +1,9 @@
 ---
 title: "Visualisation des trajets en vélo dans la ville de Montpellier."
+format: html
+execute:
+  echo: false
+  enabled: true
 ---
 ## A propos
 
@@ -14,19 +18,72 @@ Il s'agit principalement d'un projet de visualisation, avec des cartes (dont cer
 
 ## Stations de vélos à Montpellier.
 
-<iframe src="/images/montpellier_bike_stations_map.html" width="100%" height="600"></iframe>
-
-![](https://raw.githubusercontent.com/mscaia/PROJ_HAX712X/main/images/Figure_of_interest_.png){fig-align="center" width="80%"}
-
-![](https://raw.githubusercontent.com/mscaia/PROJ_HAX712X/main/images/Nbr_trajet_par_jour.png){fig-align="center" width="80%"}
-
-## Test Importation fichier Python
-
 ```{python}
-#| echo: false
-#| results: true
-exec(open("images/statistique.py").read())
+import osmnx as ox
+import folium
+import requests
+import json
+
+# Définir l'endroit
+ville = "Montpellier, France"
+
+# Récupérer le polygone des limites de Montpellier
+frontiere = ox.geocode_to_gdf(ville)
+
+# Obtenir les coordonnées du centre de Montpellier
+location = ox.geocode(ville)
+
+# Créer une carte Folium
+m = folium.Map(location=location, zoom_start=14)
+
+# Extraire les coordonnées des limites de la ville
+coords = frontiere.geometry.values[0].exterior.coords[:]
+# Tracer le polygone
+folium.Polygon(
+    locations=[(lat, lon) for lon, lat in coords],  # (lat, lon)
+    color='black',
+    fill=False,
+    weight=2.5,  # Épaisseur de la bordure
+).add_to(m)
+
+# URL de l'API
+url = "https://portail-api-data.montpellier3m.fr/bikestation?limit=1000"
+# Envoi de la requête GET
+fichier = requests.get(url, headers={"accept": "application/json"})
+# Vérifier si la requête a réussi
+if fichier.status_code == 200:
+    data = fichier.json()  # Extraire les données JSON
+
+# Ajouter des marqueurs avec les informations sur les vélos disponibles dans le popup
+for station in data:
+    # Extraire l'adresse, le nombre de vélos disponibles et le nombre de places libres
+    address = station['address']['value']['streetAddress']
+    velo_present = station['availableBikeNumber']['value']
+    total_place = station['freeSlotNumber']['value']
+    rapport = (velo_present / total_place) * 100 if total_place > 0 else 0
+    popup_text = f"""
+    <div style="font-size: 14px; font-weight: bold; color: black;">
+        <p><b>Station:</b> {address}</p>
+        <p><b>Vélos disponibles:</b> {velo_present}</p>
+        <p><b>Vélos total:</b> {total_place}</p>
+        <p><b>Pourcentage de vélos disponibles:</b> {rapport:.2f}%</p>
+    </div>
+    """
+    coords = station['location']['value']['coordinates']
+    folium.Marker(
+        location=(coords[1], coords[0]),  # (lat, lon)
+        popup=folium.Popup(popup_text, max_width=300),
+        icon=folium.Icon(color='blue', icon='info-sign')
+    ).add_to(m)
+
+# Sauvegarder la carte dans un fichier HTML dans un dossier du site
+output_path = "./montpellier_bike_stations_map.html"  # Adaptez le chemin si nécessaire
+m.save(output_path)
 ```
+
+<iframe src="montpellier_bike_stations_map.html" width="100%" height="600"></iframe>
+
+
 ## Contact
 
 Pour toute question ou suggestion, n'hésitez pas à [nous contacter](auteurs.qmd).
