remake auteurs page + upd README

--- a/docs/docu.qmd
+++ b/docs/docu.qmd
@@ -105,8 +105,8 @@ Les scripts situés dans `src/` effectuent :
 
 L’exécution du projet génère des visualisations interactives et des cartes prédictives grâce à :
 
-- **Folium** : Création de cartes interactives.  
-- **Matplotlib** : Graphiques statistiques.  
+- *Folium* : Création de cartes interactives.  
+- *Matplotlib* : Graphiques statistiques.  
 
 Les résultats sont stockés dans `visualisation/` et incluent des cartes des trajets et des prévisions de trafic.
 
@@ -988,6 +988,7 @@ Chaque frame de l'animation appelle cette fonction pour mettre à jour les point
 La classe `GestionnaireDonnees` a été créée pour gérer le téléchargement, la lecture et le traitement des jeux de données. Elle centralise les fonctions nécessaires à la gestion des données pour notre projet, en permettant le téléchargement de fichiers depuis des URLs, l'extraction de fichiers compressés, et le chargement de fichiers CSV tout en nettoyant les données manquantes. Elle simplifie ainsi les tâches courantes liées à la gestion des données dans notre système.
 
 La classe `GestionnaireDonnees` a été créée pour gérer le téléchargement, la lecture et le traitement des jeux de données. Elle permet de :
+
 - Télécharger des fichiers depuis des URLs.
 - Extraire des fichiers compressés.
 - Charger des fichiers CSV tout en nettoyant les données manquantes.
