--- a/docs/projet3.qmd
+++ b/docs/projet3.qmd
@@ -4,3 +4,7 @@ format: html
 ---
 
 Et là, la vidéo que nous avons produit.
+
+<video width="800" controls loop>
+  <source src="../visualisation/simulation_trajets.mp4" type="video/mp4">
+</video>
