--- a/docs/projet1.qmd
+++ b/docs/projet1.qmd
@@ -112,15 +112,7 @@ for i in range(5):
 
 ## Nombres totaux de trajets des différentes années depuis 2020.
 
-<iframe src="./Cycle3/images/Nbr_trajet_par_jour_2021.png" width="100%" height="600"></iframe>
-
-<iframe src="./Cycle3/images/Nbr_trajet_par_jour_2022.png" width="100%" height="600"></iframe>
-
-
-<iframe src="./Cycle3/images/Nbr_trajet_par_jour_2023.png" width="100%" height="600"></iframe>
-
-<iframe src="./Cycle3/images/Nbr_trajet_par_jour_2024.png" width="100%" height="600"></iframe>
-
+<iframe src="..\Cycle3\images\Nbr_trajet_par_jour_2021.png" width="100%" height="600"></iframe>
 
 Les données de la TaM n'étant pas parfaites, les données sont incomplètes.
 
