upd site + aj visual sur proj3

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -18,6 +18,10 @@ Il s'agit principalement d'un projet de visualisation, avec des cartes (dont cer
 
 ## Stations de vélos à Montpellier.
 
+Ci-dessous, vous trouverez une carte interactive présentant le **nombre de vélos en temps réel** disponibles dans les stations de la métropole de Montpellier.  
+
+Cette carte offre une vue d'ensemble dynamique permettant de suivre l'état des stations en direct.
+
 ```{python}
 import osmnx as ox
 import folium
