--- a/docs/projet3.qmd
+++ b/docs/projet3.qmd
@@ -1,6 +1,10 @@
 ---
-title: Projet 3
+title: Visualisation
 format: html
 ---
 
-Et là, la vidéo que nous avons produit.
+Voici une visualisation des trajets simulés pour la journée du 2024-09-05.  
+
+Pour en savoir plus sur la méthode employée pour générer cette vidéo, consultez la section **6.2.3 Vidéo** de la [documentation](docu.qmd#video).
+
+![Visualisation des trajets pour le jour X](projet3_files/figure-html/simulation_trajets.gif)
