--- a/docs/projet1.qmd
+++ b/docs/projet1.qmd
@@ -9,7 +9,7 @@ Ci-dessous, quelques éléments d'analyse des données.
 
 ```{python}
 #| warning: false
-#| echo: true
+#| echo: false
 
 import pandas as pd
 import matplotlib.pyplot as plt
@@ -112,7 +112,13 @@ for i in range(5):
 
 ## Nombres totaux de trajets des différentes années depuis 2020.
 
-<iframe src="..\Cycle3\images\Nbr_trajet_par_jour_2021.png" width="100%" height="600"></iframe>
+<iframe src="../projet1_files/figure-html/cell-2-output-6.png" width="100%" height="600"></iframe>
+
+<iframe src="../projet1_files/figure-html/cell-2-output-10.png" width="100%" height="600"></iframe>
+
+<iframe src="../projet1_files/figure-html/cell-2-output-14.png" width="100%" height="600"></iframe>
+
+<iframe src="../projet1_files/figure-html/cell-2-output-2.png" width="100%" height="600"></iframe>
 
 Les données de la TaM n'étant pas parfaites, les données sont incomplètes.
 
