upd auteurs page + render docu

--- a/docs/auteurs.qmd
+++ b/docs/auteurs.qmd
@@ -20,7 +20,7 @@ Nous sommes étudiants en Master 1 Statistique et **Science des Données (SSD)**
 ---
 
 ##### **SCAIA Matteo**
-*Création de cartes interactives et vidéos.*  
+*Analysation de données et création de cartes interactives et vidéos.*  
 - [Email](mailto:matteo.scaia@etu.umontpellier.fr)  
 - [GitHub Profile](https://github.com/mscaia)
 
