--- a/docs/projet3.qmd
+++ b/docs/projet3.qmd
@@ -3,12 +3,13 @@ title: Visualisation
 format: html
 ---
 
-Et là, la vidéo que nous avons produit.
-
-<video width="800" controls loop>
-  <source src="../visualisation/simulation_trajets.mp4" type="video/mp4">
-</video>
-
 Voici une visualisation des trajets simulés pour la journée du 2024-09-05.  
 
 Pour en savoir plus sur la méthode employée pour générer cette vidéo, consultez la section **6.2.3 Vidéo** de la [documentation](docu.qmd#video).
+
+<div style="text-align: center;">
+  <video width="600" controls>
+    <source src="projet3_files/figure-html/simulation_trajets.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
