ajout app shiny

--- a/docs/projet2.qmd
+++ b/docs/projet2.qmd
@@ -5,7 +5,7 @@ engine: shiny
 runtime: shiny
 execute:
   enabled: false
-  echo: true
+  echo: false
   warning: false
 jupyter: python3
 ---
@@ -96,4 +96,6 @@ app = App(app_ui, server)
 
 
 L'application Shiny de notre carte interactive : [Accéder à l'application Shiny](https://cyclevision3map.shinyapps.io/shiny_app/){target="_blank"}
+
+<iframe src="https://cyclevision3map.shinyapps.io/shiny_app/" width="100%" height="600px" frameborder="0"></iframe>
 
