--- a/docs/projet1.qmd
+++ b/docs/projet1.qmd
@@ -112,26 +112,26 @@ for i in range(5):
 
 ## Nombres totaux de trajets des différentes années depuis 2020.
 
-<iframe src="../projet1_files/figure-html/cell-2-output-6.png" width="100%" height="600"></iframe>
+<iframe src="projet1_files/figure-html/cell-2-output-6.png" width="100%" height="600"></iframe>
 
-<iframe src="../projet1_files/figure-html/cell-2-output-10.png" width="100%" height="600"></iframe>
+<iframe src="projet1_files/figure-html/cell-2-output-10.png" width="100%" height="600"></iframe>
 
-<iframe src="../projet1_files/figure-html/cell-2-output-14.png" width="100%" height="600"></iframe>
+<iframe src="projet1_files/figure-html/cell-2-output-14.png" width="100%" height="600"></iframe>
 
-<iframe src="../projet1_files/figure-html/cell-2-output-2.png" width="100%" height="600"></iframe>
+<iframe src="projet1_files/figure-html/cell-2-output-2.png" width="100%" height="600"></iframe>
 
 Les données de la TaM n'étant pas parfaites, les données sont incomplètes.
 
 ## Comparaison des trajets journaliers entre les années.
 
 <div style="display: flex; justify-content: space-around;">
-<iframe src="../Cycle3/images/graphique_distance_jour_2021.html" width="100%" class="crop-bottom" height="600"></iframe>
-<iframe src="../Cycle3/images/graphique_distance_jour_2022.html" width="100%" class="crop-bottom" height="600"></iframe>
+<iframe src="projet1_files/figure-html/graphique_distance_jour_2021.html" width="100%" class="crop-bottom" height="600"></iframe>
+<iframe src="projet1_files/figure-html/graphique_distance_jour_2022.html" width="100%" class="crop-bottom" height="600"></iframe>
 </div>
 
 <div style="display: flex; justify-content: space-around;">
-<iframe src="../Cycle3/images/graphique_distance_jour_2023.html" width="100%" class="crop-bottom" height="600"></iframe>
-<iframe src="../Cycle3/images/graphique_distance_jour_2024.html" width="100%" class="crop-bottom" height="600"></iframe>
+<iframe src="projet1_files/figure-html/graphique_distance_jour_2023.html" width="100%" class="crop-bottom" height="600"></iframe>
+<iframe src="projet1_files/figure-html/graphique_distance_jour_2024.html" width="100%" class="crop-bottom" height="600"></iframe>
 </div>
 
 On remarque que les différents graphes ont globalement la même forme.
