suppression contenu inutile + ajout footer

--- a/docs/projet3.qmd
+++ b/docs/projet3.qmd
@@ -1,11 +1,9 @@
 ---
-title: Visualisation
+title: Visualisation vidéo
 format: html
 ---
 
-Voici une visualisation des trajets simulés pour la journée du 2024-09-05.  
-
-Pour en savoir plus sur la méthode employée pour générer cette vidéo, consultez la section **6.2.3 Vidéo** de la [documentation](docu.qmd#video).
+Voici une visualisation vidéo des trajets simulés pour la journée du 2024-09-05.  
 
 <div style="text-align: center;">
   <video width="600" controls>
@@ -13,3 +11,5 @@ Pour en savoir plus sur la méthode employée pour générer cette vidéo, consu
     Your browser does not support the video tag.
   </video>
 </div>
+
+Pour en savoir plus sur la méthode employée pour générer cette vidéo, consultez la section **6.2.3 Vidéo** de la [documentation](docu.qmd#video).
