--- a/docs/projet2.qmd
+++ b/docs/projet2.qmd
@@ -15,120 +15,123 @@ L'application Shiny de notre carte interactive : [Accéder à l'application Shin
 
 <iframe src="https://cyclevision3map.shinyapps.io/shiny_app/" width="100%" height="600px" frameborder="0"></iframe>
 
-## Carte des intensités
+<body>
+    <!-- Carte des intensités -->
+    <h2>Carte des intensités</h2>
+    <form>
+        <label for="date-intensity">Sélectionner une date:</label>
+        <select id="date-intensity">
+            <option value="01">Lundi</option>
+            <option value="02">Mardi</option>
+            <option value="03">Mercredi</option>
+            <option value="04">Jeudi</option>
+            <option value="05">Vendredi</option>
+            <option value="06">Samedi</option>
+            <option value="07">Dimanche</option>
+        </select>
+        
+        <label for="heure-intensity">Sélectionner une heure:</label>
+        <select id="heure-intensity">
+            <option value="00">00:00</option>
+            <option value="01">01:00</option>
+            <option value="02">02:00</option>
+            <option value="03">03:00</option>
+            <option value="04">04:00</option>
+            <option value="05">05:00</option>
+            <option value="06">06:00</option>
+            <option value="07">07:00</option>
+            <option value="08">08:00</option>
+            <option value="09">09:00</option>
+            <option value="10">10:00</option>
+            <option value="11">11:00</option>
+            <option value="12">12:00</option>
+            <option value="13">13:00</option>
+            <option value="14">14:00</option>
+            <option value="15">15:00</option>
+            <option value="16">16:00</option>
+            <option value="17">17:00</option>
+            <option value="18">18:00</option>
+            <option value="19">19:00</option>
+            <option value="20">20:00</option>
+            <option value="21">21:00</option>
+            <option value="22">22:00</option>
+            <option value="23">23:00</option>
+        </select>
+        
+        <button type="button" onclick="afficherCarte('intensity')">Afficher la carte</button>
+    </form>
+    <div id="carte-intensity"></div>
 
-<form>
-    <label for="date">Sélectionner une date:</label>
-    <select id="date">
-        <option value="01">Lundi</option>
-        <option value="02">Mardi</option>
-        <option value="03">Mercredi</option>
-        <option value="03">Jeudi</option>
-        <option value="03">Vendredi</option>
-        <option value="03">Samedi</option>
-        <option value="03">Dimanche</option>
-    </select>
-    
-    <label for="heure">Sélectionner une heure:</label>
-    <select id="heure">
-        <option value="00">00:00</option>
-        <option value="01">01:00</option>
-        <option value="02">02:00</option>
-        <option value="02">03:00</option>
-        <option value="02">04:00</option>
-        <option value="02">05:00</option>
-        <option value="02">06:00</option>
-        <option value="02">07:00</option>
-        <option value="02">08:00</option>
-        <option value="02">09:00</option>
-        <option value="02">10:00</option>
-        <option value="02">11:00</option>
-        <option value="02">12:00</option>
-        <option value="02">13:00</option>
-        <option value="02">14:00</option>
-        <option value="02">15:00</option>
-        <option value="02">16:00</option>
-        <option value="02">17:00</option>
-        <option value="02">18:00</option>
-        <option value="02">19:00</option>
-        <option value="02">20:00</option>
-        <option value="02">21:00</option>
-        <option value="02">22:00</option>
-        <option value="02">23:00</option>
-    </select>
-    
-    <button type="button" onclick="afficherCarte()">Afficher la carte</button>
-</form>
+    <!-- Carte des trajets -->
+    <h2>Carte des trajets</h2>
+    <form>
+        <label for="date-trajets">Sélectionner une date:</label>
+        <select id="date-trajets">
+            <option value="01">Lundi</option>
+            <option value="02">Mardi</option>
+            <option value="03">Mercredi</option>
+            <option value="04">Jeudi</option>
+            <option value="05">Vendredi</option>
+            <option value="06">Samedi</option>
+            <option value="07">Dimanche</option>
+        </select>
+        
+        <label for="heure-trajets">Sélectionner une heure:</label>
+        <select id="heure-trajets">
+            <option value="00">00:00</option>
+            <option value="01">01:00</option>
+            <option value="02">02:00</option>
+            <option value="03">03:00</option>
+            <option value="04">04:00</option>
+            <option value="05">05:00</option>
+            <option value="06">06:00</option>
+            <option value="07">07:00</option>
+            <option value="08">08:00</option>
+            <option value="09">09:00</option>
+            <option value="10">10:00</option>
+            <option value="11">11:00</option>
+            <option value="12">12:00</option>
+            <option value="13">13:00</option>
+            <option value="14">14:00</option>
+            <option value="15">15:00</option>
+            <option value="16">16:00</option>
+            <option value="17">17:00</option>
+            <option value="18">18:00</option>
+            <option value="19">19:00</option>
+            <option value="20">20:00</option>
+            <option value="21">21:00</option>
+            <option value="22">22:00</option>
+            <option value="23">23:00</option>
+        </select>
+        
+        <button type="button" onclick="afficherCarte('trajets')">Afficher la carte</button>
+    </form>
+    <div id="carte-trajets"></div>
 
-<div id="carte"></div>
+    <script>
+        function afficherCarte(type) {
+            // Sélectionner les bons éléments en fonction du type
+            const date = document.getElementById(`date-${type}`).value;
+            const heure = document.getElementById(`heure-${type}`).value;
+            const carteDiv = document.getElementById(`carte-${type}`);
 
-<script>
-function afficherCarte() {
-    const date = document.getElementById('date').value;
-    const heure = document.getElementById('heure').value;
+            // Générer le chemin du fichier correspondant
+            const fichierCarte = (type === 'intensity') 
+                ? `projet2_files/cartes_intensity/intensity_${date}_${heure}.html`
+                : `projet2_files/cartes_trajets/trajets_${date}_${heure}.html`;
 
-    // Générer le nom du fichier HTML en fonction de la date et de l'heure sélectionnées
-    const fichierCarte = `intensity_${date}_${heure}.html`;
+            // Supprimer l'iframe existante (si elle existe)
+            carteDiv.innerHTML = '';
 
-    // Récupérer la div qui contient l'iframe
-    const carteDiv = document.getElementById('carte');
-    
-    // Supprimer l'iframe existante (si elle existe)
-    carteDiv.innerHTML = '';
+            // Créer une nouvelle iframe
+            const iframe = document.createElement('iframe');
+            iframe.src = fichierCarte;
+            iframe.width = '100%';
+            iframe.height = '500px';
 
-    // Créer une nouvelle iframe et ajouter à la div
-    const iframe = document.createElement('iframe');
-    iframe.src = `projet2_files/cartes_intensity/${fichierCarte}`;
-    iframe.width = '100%';
-    iframe.height = '500px';
-
-    // Ajouter l'iframe à la div
-    carteDiv.appendChild(iframe);
-}
-</script>
-
-
-## Carte des trajets
-
-<form>
-    <label for="date">Sélectionner une date:</label>
-    <select id="date">
-        <option value="01">Lundi</option>
-        <option value="02">Mardi</option>
-        <option value="03">Mercredi</option>
-        <option value="03">Jeudi</option>
-        <option value="03">Vendredi</option>
-        <option value="03">Samedi</option>
-        <option value="03">Dimanche</option>
-    </select>
-    
-    <label for="heure">Sélectionner une heure:</label>
-    <select id="heure">
-        <option value="00">00:00</option>
-        <option value="01">01:00</option>
-        <option value="02">02:00</option>
-        <option value="02">03:00</option>
-        <option value="02">04:00</option>
-        <option value="02">05:00</option>
-        <option value="02">06:00</option>
-        <option value="02">07:00</option>
-        <option value="02">08:00</option>
-        <option value="02">09:00</option>
-        <option value="02">10:00</option>
-        <option value="02">11:00</option>
-        <option value="02">12:00</option>
-        <option value="02">13:00</option>
-        <option value="02">14:00</option>
-        <option value="02">15:00</option>
-        <option value="02">16:00</option>
-        <option value="02">17:00</option>
-        <option value="02">18:00</option>
-        <option value="02">19:00</option>
-        <option value="02">20:00</option>
-        <option value="02">21:00</option>
-        <option value="02">22:00</option>
-        <option value="02">23:00</option>
-    </select>
-    
-    <button type="button" onclick="afficherCarte()">Afficher la carte</button>
-</form>
+            // Ajouter l'iframe à la div
+            carteDiv.appendChild(iframe);
+        }
+    </script>
+</body>
+</html>
