--- a/docs/projet3.qmd
+++ b/docs/projet3.qmd
@@ -7,7 +7,32 @@ Voici une visualisation vidéo des trajets simulés pour la journée du 2024-09-
 
 <div style="text-align: center;">
   <video width="600" controls>
-    <source src="projet3_files/figure-html/simulation_trajets.mp4" type="video/mp4">
+    <source src="projet3_files/figure-html/simulation_trajets-09-05.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
+
+Vous pouvez également consulter les vidéos suivantes de notre galerie:
+
+<div style="display: flex; overflow-x: auto; gap: 10px; padding: 10px; border: 1px solid #ccc;">
+  <video width="300" controls>
+    <source src="projet3_files/figure-html/simulation_trajets_01-10.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <video width="300" controls>
+    <source src="projet3_files/figure-html/simulation_trajets_03-26.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <video width="300" controls>
+    <source src="projet3_files/figure-html/simulation_trajets_05-23.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <video width="300" controls>
+    <source src="projet3_files/figure-html/simulation_trajets_09-25.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <video width="300" controls>
+    <source src="projet3_files/figure-html/simulation_trajets_09-25.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </div>
