--- a/docs/auteurs.qmd
+++ b/docs/auteurs.qmd
@@ -5,47 +5,31 @@ format: html
 Nous sommes étudiants en Master 1 Statistique et **Science des Données (SSD)** à l’Université de Montpellier. Dans le cadre du cours *Développement Logiciel*, nous avons collaboré sur le projet **CycleVision3**, combinant nos compétences pour concevoir une solution innovante dédiée à l’analyse du trafic cycliste.
 ---
 
-<div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
-  <!-- Armand Charlotte -->
-  <div style="flex: 1 1 45%; border: 1px solid #ccc; padding: 10px; border-radius: 8px;">
-    <h5>**ARMAND Charlotte**</h5>
-    <p>*Création de cartes interactives et prévisions de trafic.*</p>
-    <ul>
-      <li><a href="mailto:charlotte.armand@etu.umontpellier.fr">Email</a></li>
-      <li><a href="https://github.com/CharlotteARMAND">GitHub Profile</a></li>
-    </ul>
-  </div>
+##### **ARMAND Charlotte**
+*Création de cartes interactives et prévisions de trafic.*  
+- [Email](mailto:charlotte.armand@etu.umontpellier.fr)  
+- [GitHub Profile](https://github.com/CharlotteARMAND)
 
-  <!-- Condamy Fabian -->
-  <div style="flex: 1 1 45%; border: 1px solid #ccc; padding: 10px; border-radius: 8px;">
-    <h5>**CONDAMY Fabian**</h5>
-    <p>*Développement et déploiement du site web.*</p>
-    <ul>
-      <li><a href="mailto:fabian.condamy@etu.umontpellier.fr">Email</a></li>
-      <li><a href="https://github.com/FabianCondamy">GitHub Profile</a></li>
-    </ul>
-  </div>
+---
 
-  <!-- Scaia Matteo -->
-  <div style="flex: 1 1 45%; border: 1px solid #ccc; padding: 10px; border-radius: 8px;">
-    <h5>**SCAIA Matteo**</h5>
-    <p>*Analyse de données et création de cartes interactives et vidéos.*</p>
-    <ul>
-      <li><a href="mailto:matteo.scaia@etu.umontpellier.fr">Email</a></li>
-      <li><a href="https://github.com/mscaia">GitHub Profile</a></li>
-    </ul>
-  </div>
+##### **CONDAMY Fabian**
+*Développement et déploiement du site web.*  
+- [Email](mailto:fabian.condamy@etu.umontpellier.fr)  
+- [GitHub Profile](https://github.com/FabianCondamy)
 
-  <!-- Stetsun Kateryna -->
-  <div style="flex: 1 1 45%; border: 1px solid #ccc; padding: 10px; border-radius: 8px;">
-    <h5>**STETSUN Kateryna**</h5>
-    <p>*Tests et documentation du projet.*</p>
-    <ul>
-      <li><a href="mailto:kateryna.stetsun@etu.umontpellier.fr">Email</a></li>
-      <li><a href="https://github.com/KatyaStetsun">GitHub Profile</a></li>
-    </ul>
-  </div>
-</div>
+---
+
+##### **SCAIA Matteo**
+*Analyse de données et création de cartes interactives et vidéos.*  
+- [Email](mailto:matteo.scaia@etu.umontpellier.fr)  
+- [GitHub Profile](https://github.com/mscaia)
+
+---
+
+##### **STETSUN Kateryna**
+*Tests et documentation du projet.*  
+- [Email](mailto:kateryna.stetsun@etu.umontpellier.fr)  
+- [GitHub Profile](https://github.com/KatyaStetsun)
 
 ---
 
