--- a/docs/projet3.qmd
+++ b/docs/projet3.qmd
@@ -14,27 +14,29 @@ Voici une visualisation vidéo des trajets simulés pour la journée du 2024-09-
 
 Vous pouvez également consulter les vidéos suivantes de notre galerie:
 
-<div style="display: flex; overflow-x: auto; gap: 10px; padding: 10px; border: 1px solid #ccc;">
+<div style="display: flex; overflow-x: auto; gap: 10px; padding: 10px; border: 1px solid #ccc; width: 100%;">
+
   <video width="300" controls>
     <source src="projet3_files/figure-html/simulation_trajets_01-10.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
+
   <video width="300" controls>
     <source src="projet3_files/figure-html/simulation_trajets_03-26.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
+
   <video width="300" controls>
     <source src="projet3_files/figure-html/simulation_trajets_05-23.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
+
   <video width="300" controls>
     <source src="projet3_files/figure-html/simulation_trajets_09-25.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-  <video width="300" controls>
-    <source src="projet3_files/figure-html/simulation_trajets_09-25.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+
 </div>
+
 
 Pour en savoir plus sur la méthode employée pour générer cette vidéo, consultez la section **6.2.3 Vidéo** de la [documentation](docu.qmd#video).
