--- a/docs/auteurs.qmd
+++ b/docs/auteurs.qmd
@@ -5,31 +5,53 @@ format: html
 Nous sommes étudiants en Master 1 Statistique et **Science des Données (SSD)** à l’Université de Montpellier. Dans le cadre du cours *Développement Logiciel*, nous avons collaboré sur le projet **CycleVision3**, combinant nos compétences pour concevoir une solution innovante dédiée à l’analyse du trafic cycliste.
 ---
 
-##### **ARMAND Charlotte**
-*Création de cartes interactives et prévisions de trafic.*  
-- [Email](mailto:charlotte.armand@etu.umontpellier.fr)  
-- [GitHub Profile](https://github.com/CharlotteARMAND)
+<table style="width: 100%; border: none; border-spacing: 20px;">
 
----
+  <tr>
+    <!-- Person 1 -->
+    <td style="width: 45%; vertical-align: top; padding: 10px;">
+      <h5><strong>ARMAND Charlotte</strong></h5>
+      <p><em>Création de cartes interactives et prévisions de trafic.</em></p>
+      <ul>
+        <li><a href="mailto:charlotte.armand@etu.umontpellier.fr">Email</a></li>
+        <li><a href="https://github.com/CharlotteARMAND">GitHub Profile</a></li>
+      </ul>
+    </td>
 
-##### **CONDAMY Fabian**
-*Développement et déploiement du site web.*  
-- [Email](mailto:fabian.condamy@etu.umontpellier.fr)  
-- [GitHub Profile](https://github.com/FabianCondamy)
+    <!-- Person 2 -->
+    <td style="width: 45%; vertical-align: top; padding: 10px;">
+      <h5><strong>CONDAMY Fabian</strong></h5>
+      <p><em>Développement et déploiement du site web.</em></p>
+      <ul>
+        <li><a href="mailto:fabian.condamy@etu.umontpellier.fr">Email</a></li>
+        <li><a href="https://github.com/FabianCondamy">GitHub Profile</a></li>
+      </ul>
+    </td>
+  </tr>
 
----
+  <tr>
+    <!-- Person 3 -->
+    <td style="width: 45%; vertical-align: top; padding: 10px;">
+      <h5><strong>SCAIA Matteo</strong></h5>
+      <p><em>Analyse de données et création de cartes interactives et vidéos.</em></p>
+      <ul>
+        <li><a href="mailto:matteo.scaia@etu.umontpellier.fr">Email</a></li>
+        <li><a href="https://github.com/mscaia">GitHub Profile</a></li>
+      </ul>
+    </td>
 
-##### **SCAIA Matteo**
-*Analyse de données et création de cartes interactives et vidéos.*  
-- [Email](mailto:matteo.scaia@etu.umontpellier.fr)  
-- [GitHub Profile](https://github.com/mscaia)
+    <!-- Person 4 -->
+    <td style="width: 45%; vertical-align: top; padding: 10px;">
+      <h5><strong>STETSUN Kateryna</strong></h5>
+      <p><em>Tests et documentation du projet, assistance développement du site web.</em></p>
+      <ul>
+        <li><a href="mailto:kateryna.stetsun@etu.umontpellier.fr">Email</a></li>
+        <li><a href="https://github.com/KatyaStetsun">GitHub Profile</a></li>
+      </ul>
+    </td>
+  </tr>
 
----
-
-##### **STETSUN Kateryna**
-*Tests et documentation du projet.*  
-- [Email](mailto:kateryna.stetsun@etu.umontpellier.fr)  
-- [GitHub Profile](https://github.com/KatyaStetsun)
+</table>
 
 ---
 
