--- a/docs/projet2.qmd
+++ b/docs/projet2.qmd
@@ -8,12 +8,14 @@ execute:
 jupyter: python3
 ---
 
-Ici, les cartes issues de nos principaux travaux.
-
-
-L'application Shiny de notre carte interactive : [Accéder à l'application Shiny](https://cyclevision3map.shinyapps.io/shiny_app/){target="_blank"}
+## Carte interactive des trajets
 
 <iframe src="https://cyclevision3map.shinyapps.io/shiny_app/" width="100%" height="600px" frameborder="0"></iframe>
+
+L'application Shiny est en ligne ici : [Accéder à l'application Shiny](https://cyclevision3map.shinyapps.io/shiny_app/){target="_blank"}
+
+
+## Cartes prévisionnelles 
 
 <body>
     <!-- Carte des intensités -->
